# ComfyUI-kaola-soulX-Singer

./: .flake8  .gitignore  README.md  debug_soulx_imports.py  nodes.py  pyproject.toml  requirements.txt  workflow_example.json
.github/workflows/: publish.yml
examples/: workflow_example.json
soulx_singer_repo/: .gitignore  README.md  requirements.txt  webui.py
soulx_singer_repo/preprocess/: pipeline.py
soulx_singer_repo/preprocess/tools/: __init__.py  f0_extraction.py  lyric_transcription.py
soulx_singer_repo/preprocess/tools/midi_editor/: README.md  README_CN.md  index.html  package-lock.json
soulx_singer_repo/preprocess/tools/midi_editor/src/: App.css  App.tsx  i18n.ts
soulx_singer_repo/preprocess/tools/midi_editor/src/components/: LyricTable.tsx
soulx_singer_repo/preprocess/tools/midi_editor/src/lib/: midi.ts
soulx_singer_repo/preprocess/tools/note_transcription/: model.py
soulx_singer_repo/preprocess/tools/note_transcription/modules/pe/rmvpe/: inference.py
soulx_singer_repo/preprocess/tools/vocal_separation/: model.py
soulx_singer_repo/soulxsinger/models/modules/: decoder.py  flow_matching.py  llama.py  mel_transform.py  vocoder.py
soulx_singer_repo/soulxsinger/utils/: audio_utils.py  data_processor.py
